3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

include/plugin.h, common/object.c: Add EVENT_DESTROY, a local event triggered when
    an object is freed.
include/funcpoint.h, crossedit/stubs.c, random_maps/standalone.c,
    test/unit/common/stubs_common.c: Allow execute_event to be called from common
    and add appropriate stubs.
Alex Schultz 2006-07-28

common/item.c: In describe_item() correct capacity description of large
   (>1000 maxsp) Glowing Crystals.
Andreas Kirschbaum 2006-07-28

plugins/cfpython/cfpython.c: Added compilePython() function to split the compiling
    of python bytecode from the execution of it. Add support for caching the
    bytecode for a fixed number of scripts (default of 16) to increase speed.
Alex Schultz 2006-07-27

server/c_wiz.c: prevent a DM to reset a random map if (s)he is on that map.
    Workaround for bug #1528173.
Yann Chachkoff 2006-07-26

server/c_wiz.c: call update_ob_speed if removed object is animated.
server/spell_attack.c: stop generating swarm/bullet if player moved. This
 fixes bug #1528194.
server/spell_util.c: don't report blocking if caster is not player. It then
 is a swarm spell or equivalent, so position is random, no need to warn.
Ryo 2006-07-25

server/server.c: Select op->facing instead of op->direction in process_events
    for players and monsters as the direction reference for the face to display.
    Fix for bug #1528182. (*few* ! that's a lot of bugs ! :))
server/spell_util.c: Make the search for a friendly target for some spells also
    browse transports located in the square from which the spell was cast.
    This is a fix for bug #1528018